app/assets/stylesheets/pages/_dashboard.scss
.cards-dashboard {
  display: flex;
  justify-content: space-between;
  h1 {
    font-family: 'Pacifico', cursive;
  }
  h2 {
    font-family: 'Pacifico', cursive;
    font-size: 23px;
  }
}

.component-dashboard-inflatable {
  background: white;
  padding: 15px;
  margin-right: 20px;
}

.component-dashboard {
  padding: 15px;
}

.card-product {
  overflow: hidden;
  height: 120px;
  background: white;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

.card-product img {
  height: 100%;
  width: 120px;
  object-fit: cover;
}

.card-product h2 {
  font-size: 16px;
  font-weight: bold;
  margin: 0;
}

.card-product p {
  font-size: 12px;
  line-height: 1.4;
  opacity: .7;
  margin-bottom: 0;
  margin-top: 8px;
}

.card-product .card-product-infos {
  padding: 16px;
}

